TLDW :scream_cat:

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	Raven
 		// https://docs.sentry.io/clients/javascript/config/
 		.config('https://52f8a7ef91a24f50bd54447e0a120476@sentry.io/233871', {
-			release: 'TODO',
+			release: 'v1.1',
 		})
 		.install()
 
