TLDW :scream_cat:

--- a/index.html
+++ b/index.html
@@ -53,12 +53,11 @@
 	})
 
 	Raven.setTagsContext({
-		lang: "en-au"
+		cohort: 'variation',
 	})
 
 	Raven.setExtraContext({
-		foo: 'bar',
-		baz: 42,
+		experiment: 'GROW-1234',
 	})
 
 	/*
